# ai-dj_network

./: .dockerignore  .env.example  .gitignore  BUILD_WAVEFORM_GUIDE.md  Dockerfile  LICENSE  ONNX_INSTALLATION.md  README.md  ROSDEP_SETUP.md  YAMNET_QUICK_REFERENCE.md  YAMNET_SETUP_GUIDE.md  app.js  docker-compose.yml  gitignore  index.html  requirements.txt  rosdep.yaml  setup_onnxruntime.sh  style.css  test_audio_input.py
ai-dj-webapp/: index.html  package-lock.json  package.json  vite.config.ts
ai-dj-webapp/src/: App.tsx  index.css
ai-dj-webapp/src/components/: ClassificationCard.tsx  ConfirmPrompt.tsx  Countdown.tsx  GamePrompt.tsx  LedMatrix.tsx  MainButtons.tsx  TextCard.tsx
ai-dj-webapp/src/hooks/: useFlowMachine.ts  useRhythmEngine.ts  useWebSocket.ts
ai-dj-webapp/src/pages/: classification.tsx  game.tsx  info.tsx  welcome.tsx
ai-dj-webapp/src/state/: flowMachine.ts  soundConfig.ts  soundFiles.ts
models/: README.md  convert_yamnet_to_onnx.py  cultural_classes.txt  natural_classes.txt  surveillance_classes.txt
sketches/: README.md  zone1_02.ino
sketches/button_reader/: button_reader.ino
sketches/pico1_matrix/: pico1_matrix.ino
sketches/pico2_matrix/: pico2_matrix.ino
sounds/: README.md  convert_audio.py  requirements.txt
src/cpp_pkg/: CMakeLists.txt  package.xml
src/cpp_pkg/include/cpp_pkg/: serial_port.hpp
src/cpp_pkg/launch/: bringup.launch.py  three_yamnet_models.launch.py
src/cpp_pkg/src/: build_waveform.cpp  my_first_node.cpp  reader.cpp  serial_port.cpp  writer.cpp  yamnet_classification.cpp
src/py_pkg/: package.xml  setup.py
src/py_pkg/py_pkg/: llm_node.py  web_bridge.py
webapp/: .gitignore  README.md  app.js  index.html  package.json  style.css
webapp/css/: style.css
webapp/js/: app.js
